swagger docs edition, new logs
