# docs/swagger.json
@@ -30,13 +30,13 @@
                         }
                     },
                     "401": {
-                        "description": "Wrong auth data",
+                        "description": "Error raturned when the provided auth data is invalid",
                         "schema": {
                             "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "No auth data",
+                        "description": "Error raturned when auth data was not provided",
                         "schema": {
                             "$ref": "#/definitions/schemas.ErrorResponse"
                         }
@@ -52,7 +52,7 @@
         },
         "/api/login": {
             "post": {
-                "description": "Authenticates a user using email and password, and generates a new JWT",
+                "description": "Authenticates a user using email and password, and generates a new JWT. Also sets refresh token in cookies.",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,7 +60,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
                 "summary": "Logs in a user",
                 "parameters": [
@@ -84,19 +84,25 @@
                     "400": {
                         "description": "Returns an error message if the request body cannot be parsed",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "401": {
-                        "description": "Returns an error message if the provided password does not match the hash stored in the database",
+                        "description": "Error raturned when the provided auth data is invalid",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Error raturned when auth data was not provided",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Returns an error message if there is a server-side issue",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -104,7 +110,7 @@
         },
         "/api/refresh": {
             "post": {
-                "description": "Use the refresh token to get a new access token",
+                "description": "Use the refresh token to get a new access token and to set new refresh token in cookies.",
                 "consumes": [
                     "application/json"
                 ],
@@ -122,28 +128,22 @@
                             "$ref": "#/definitions/schemas.TokenResponse"
                         }
                     },
-                    "400": {
-                        "description": "bad request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     "401": {
-                        "description": "unauthorized",
+                        "description": "Error raturned when the provided auth data is invalid",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "403": {
-                        "description": "Auth data was not provided",
+                        "description": "Error raturned when auth data was not provided",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -190,6 +190,18 @@
                             "items": {
                                 "$ref": "#/definitions/models.User"
                             }
+                        }
+                    },
+                    "401": {
+                        "description": "Error raturned when the provided auth data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Error raturned when auth data was not provided",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "422": {
@@ -239,15 +251,25 @@
                     "400": {
                         "description": "Bad request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Error raturned when the provided auth data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Error raturned when auth data was not provided",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -279,6 +301,18 @@
                             "$ref": "#/definitions/models.User"
                         }
                     },
+                    "401": {
+                        "description": "Error raturned when the provided auth data is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Error raturned when auth data was not provided",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "User not found",
                         "schema": {
@@ -286,7 +320,7 @@
                         }
                     },
                     "406": {
-                        "description": "Multiple users found",
+                        "description": "Multiple records found (internal error)",
                         "schema": {
                             "$ref": "#/definitions/schemas.ErrorResponse"
                         }
